--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ nav {
     background-color: #080022;
     height: 80px;
     width: 100%;
+    position: fixed;
 }
 
 label.logo {
@@ -84,8 +85,8 @@ a:hover {
     ul {
         position: fixed;
         width: 100%;
-        height: 100vh;
-        background: #9596e0;
+        height: 100%;
+        background: #000000;
         top: 80px;
         left: -100%;
         text-align: center;
@@ -102,7 +103,7 @@ a:hover {
     a:hover,
     a.active {
         background: none;
-        color: black;
+        color: rgb(255, 255, 255);
     }
     #check:checked~ul {
         left: 0;
