--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ a:hover {
         text-align: center;
         transition: all 0.5s;
     }
+    /* hii  */
     nav ul li {
         display: block;
         margin: 50px 0;
